--- a/src/pages/MeasurmentPage/index.css
+++ b/src/pages/MeasurmentPage/index.css
@@ -49,3 +49,34 @@
   font-size: 20px;
   font-weight: 600;
 }
+
+@media (max-width: 1000px) {
+  .measurment {
+    padding: 5rem 5rem;
+  }
+  .measurment__content {
+    grid-template-columns: 1fr 1fr;
+  }
+  .measurment__title h1 {
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    color: #00ff00;
+  }
+}
+
+@media (max-width: 500px) {
+  .measurment {
+    padding: 5rem 2rem;
+  }
+  .measurment__content {
+    grid-template-columns: 1fr;
+  }
+
+  .measurment__title h1 {
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 20px;
+    color: #00ff00;
+  }
+}
